--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ body {
 
 main {
   display: flex;
-  margin: 2em 0;
+  margin: 0.5em 0;
   justify-content: space-around;
 }
 
@@ -52,6 +52,11 @@ button:hover {
   background-color: lightgray;
 }
 
+ul {
+  height: 430px;
+  overflow: auto;
+}
+
 ul li {
   list-style: none;
   padding: 4px 8px;
@@ -61,7 +66,7 @@ li:nth-child(2n) {
   background: lightgray;
 }
 
-ul.scores-list,
+ul.list,
 input {
   border: 3px solid black;
 }
