--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ body {
 
 header {
   margin-top: 1rem;
+  text-align: center;
 }
 main {
   display: flex;
@@ -94,4 +95,23 @@ input {
 input:focus {
   border: 3px solid grey;
   outline: none;
+}
+
+.ri-vip-crown-line {
+  font-size: 80%;
+  margin: 0 1rem;
+  color: gold;
+}
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background-color: lightgray;
+  color: black;
+  text-align: center;
+}
+
+.ri-github-fill {
+  margin: auto 5px;
 }
